Update Lab “lab--lab-0-introduction”

--- a/src/content/docs/labs/lab--lab-0-introduction.mdx
+++ b/src/content/docs/labs/lab--lab-0-introduction.mdx
@@ -1,18 +1,18 @@
 ---
-title: Lab 0 - Introduction
-description: This is an introductory lab to undertand the enviroment
-lab_number: 0
-duration: 1 week
-sidebar.order: 1
+hardware:
+  - component: "- TM4C1294XL"
 status: draft
+duration: 1 week
+main_activity: Esto es una prueba
+title: Lab 0 - Introduction
 objectives:
   - "- Familiarice with enviroment"
   - -Install all the dependencies
-main_activity: Esto es una prueba
-hardware:
-  - component: "- TM4C1294XL"
+lab_number: 0
+sidebar.order: 1
 evaluation:
   requires_report: true
   report_format: PDF
+description: This is an introductory lab to undertand the enviroment
 ---
-example
+example WPI test 2025
